# scrypt

./: Cargo.toml
.github/workflows/: mayhem.yml  sync.yml
mayhem/: Dockerfile  Mayhemfile_scrypt  build.sh  scrypt.dict  test.sh
mayhem/fuzz/: Cargo.toml
mayhem/fuzz/fuzz_targets/: scrypt_fuzzer.rs
